<resources>
    <string name="app_name">Follett Destiny</string>
    <string name="dev_brand_name">Honeywell</string>
    <string name="CheckoutPatronListFragment">CheckoutPatronListFragment</string>
    <string name="alert_wait">Loading. Please wait</string>
    <string name="alert_text">Alert Message!</string>
    <string name="ok">OK</string>
    <string name="net">Net</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="update">UPDATE</string>
    <string name="no">No</string>
    <string name="alert_warning">Information</string>
    <string name="alert_success">Alert</string>
    <string name="back">Back</string>
    <string name="app_status_title">DESTINY</string>
    <string name="connect_your_school_label">Connect to Your School</string>
    <string name="select_district_label">Select District</string>
    <string name="select_school_label">Select School</string>
    <string name="get_started_label">Get Started</string>
    <string name="loading_label">Please wait...</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_des">Please try again when you have a better connection.</string>
    <string name="double_quote">\"</string>
    <string name="error_unable_to_complete_request">Unable to complete request. Please try again.</string>
    <string name="home">HOME</string>
    <string name="checkInCheckout">" Check Out\nCheck In"</string>
    <string name="patronStatus">"Patron\nStatus"</string>
    <string name="itemStatus">Item Status</string>
    <string name="inventory">Inventory</string>
    <string name="receive">Receive</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="checkin">Check In</string>
    <string name="checkout">Check Out</string>
    <string name="checkinChecoutTitle">Check Out/Check In</string>
    <string name="findPatron">Find Patron</string>
    <string name="enterBarcode">Enter Barcode</string>
    <string name="scan">SCAN</string>
    <string name="Go">GO</string>
    <string name="library">LIBRARY</string>
    <string name="resource">RESOURCE</string>
    <string name="titleDetails">Title Details</string>
    <string name="additional_info_title">Additional Info</string>
    <string name="checkoutLabel">"Checked Out: "</string>
    <string name="overdueLabel">"Overdue: "</string>
    <string name="checkedin">Checked In</string>
    <string name="checkedOut">Checked Out</string>
    <string name="checkedOutBlocked">Checkout Blocked</string>
    <string name="allow">Allow</string>
    <string name="squareB">[%s]</string>
    <string name="recordInLibrary">Record In-Library Usage</string>
    <string name="selectPatron">Select Patron</string>
    <string name="errorPatronEntry">You must enter a patron barcode or name.</string>
    <string name="barcodeLabel">Barcode: </string>
    <string name="homeRoomLabel">HomeRoom: </string>
    <string name="gradeLevelLabel">Grade Level: </string>
    <string name="basic_label">BASIC</string>
    <string name="advanced_label">ADVANCED</string>
    <string name="library_label">Enter Destiny URL or IP Address</string>
    <string name="port_label">Port Number (e.g. 80)</string>
    <string name="ssl_port_label">SSL Port Number (e.g. 443)</string>
    <string name="connect_label">connect</string>
    <string name="url_empty_label">URL cannot be empty.</string>
    <string name="port_empty_lable">Port cannot be empty</string>
    <string name="ssl_port_empty_lable">SSL port cannot be empty.</string>
    <string name="username_empty_lebel">User ID cannot be empty.</string>
    <string name="password_empty_lebel">Password cannot be empty.</string>
    <string name="error_invalid_servername">Server name is invalid.</string>
    <string name="ssl_error">An SSL Error has occurred and the secure connection to the server cannot be made</string>
    <string name="error_sorry_school_not_setup">This app requires your school to have Destiny version 10.5 or higher installed.</string>
    <string name="error_unable_to_communicate">Unable to communicate with server.</string>
    <string name="error_load_prefs">Unable to load preferences.</string>
    <string name="school_noschoollist">No School Listed</string>
    <string name="no_district_list">No District Listed</string>
    <string name="dont_see_your_district">DON`T SEE YOUR DISTRICT?</string>
    <string name="dont_see_your_school">DON`T SEE YOUR SCHOOL?</string>
    <string name="additional_info">ADDITIONAL INFO</string>
    <string name="no_district">No district available</string>
    <string name="no_schools">No schools are configured in %s. Please contact your system administrator.</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="invalid_user_id">Invalid username or password.</string>
    <string name="log_in_to_a_different_server">LOG IN TO A DIFFERENT SERVER</string>
    <string name="item_description">Description</string>
    <string name="item_availability">Availability</string>
    <string name="item_rating">Rating : </string>
    <string name="item_status">Status</string>
    <string name="item_titleby">Titles By</string>
    <string name="item_published">Published</string>
    <string name="item_edition">Edition</string>
    <string name="item_format">Format</string>
    <string name="item_isbn">ISBN</string>
    <string name="item_target">Target Audience </string>
    <string name="item_accelerated">AR</string>
    <string name="item_status_in">Status : IN</string>
    <string name="item_status_out">Status : Out</string>
    <string name="item_callno">Call# </string>
    <string name="itemstatus_callno">Call #: </string>
    <string name="of">\tof \t</string>
    <string name="item_quiz_no">Quiz Number: </string>
    <string name="item_points">, Points : </string>
    <string name="intent_titlemoredetails">titleMoreDetails</string>
    <string name="available_txt">\tAvailable</string>
    <string name="one">1</string>
    <string name="nullCheck">Null</string>
    <string name="findItem">Find Item</string>
    <string name="item_status_title">Item Status</string>
    <string name="item_not_found">Copy %s not found</string>
    <string name="copyitem_not_found">Item %s not found</string>
    <string name="statusName">Status : %s</string>
    <string name="availableTxt">Available</string>
    <string name="scanPatron">scanPatron</string>
    <string name="error">Error</string>
    <string name="scanPatronError">Scan patron error</string>
    <string name="noDataFound">no data found from api result</string>
    <string name="patron_status">Patron \nStatus</string>
    <string name="patron_status_label">Patron Status</string>
    <string name="patron_not_found">Patron %s not found</string>
    <string name="items_overude_label">items overdue</string>
    <string name="onhold_label">items on hold</string>
    <string name="title_hold_count">Hold (%s)</string>
    <string name="item_checkout_count">Check Outs (%s)</string>
    <string name="fines_count">Fines (%s)</string>
    <string name="barcodelabel">Barcode: %s</string>
    <string name="homeroomlabel">HomeRoom: %s</string>
    <string name="gradelevellabel">Grade Level: %s</string>
    <string name="barcode_label">Barcode: %s</string>
    <string name="due_label">Due: %s</string>
    <string name="item_checkout_label">Check Outs</string>
    <string name="library_title_label">Library Titles</string>
    <string name="resource_item_label">Resource Items</string>
    <string name="on_hold_label">Hold</string>
    <string name="fine_label">Fines</string>
    <string name="overdue_label">Overdue</string>
    <string name="notes">Notes</string>
    <string name="info">Follett Destiny Version %1$s</string>
    <string name="copyright_info">Copyright 2018 Follet School Solutions. \nA Follett Corporation Company. \nAll Rights Reserved. \n \nBuild %1$s \nAPI Version: %2$s</string>
    <string name="view_legel">VIEW LEGAL</string>
    <string name="site_info">Site: %1$s</string>
    <string name="user_info">User: %1$s</string>
    <string name="note">Note: If your library uses Standard Interleaved 2 of 5 or Standard Codabr barcodes, turn Follett decoding off. </string>
    <string name="rate_follett_destiny">RATE FOLLETT DESTINY</string>
    <string name="change_site">CHANGE SITE</string>
    <string name="logout">LOG OUT</string>
    <string name="inventoryTitle">Inventory</string>
    <string name="viewSelection">VIEW SELECTIONS</string>
    <string name="selectInventory">Select Inventory</string>
    <string name="no_selected_inventories">No Selected Inventories available</string>
    <string name="inventorySelections">Inventory Selections</string>
    <string name="seenOnOrAfter">Seen On Or After</string>
    <string name="newInventoryTitle">New Inventory</string>
    <string name="inventory_error">You must enter a barcode.</string>
    <string name="last_item_label">Last Item Scanned:</string>
    <string name="not_found_label">Not Found</string>
    <string name="finalize_inventory">Finalize Inventory</string>
    <string name="unaccounted_copies">%1$d copies unaccounted</string>
    <string name="mark_lost">MARK LOST</string>
    <string name="ignore">IGNORE</string>
    <string name="callNumbersDescription">To specify a call number range, enter at least the first 3 digits of each Dewey number or a complete call number prefix.</string>
    <string name="call_from">Call Numbers from:</string>
    <string name="call_num">Call Number</string>
    <string name="callNumbers">Call Numbers</string>
    <string name="inventoryLimitedTo">Inventory Limited To</string>
    <string name="resourceTypes">Resource Types</string>
    <string name="call_to">To:</string>
    <string name="enter_date">Enter Date</string>
    <string name="limitedTo">Limited To</string>
    <string name="unlimited">Unlimited</string>
    <string name="homeLocation">Home Location</string>
    <string name="custodian">Custodian</string>
    <string name="department">Department</string>
    <string name="priceGreater">Greater than or Equal to</string>
    <string name="priceLess">Less than</string>
    <string name="all">All</string>
    <string name="checkedOutInCirculation">Checked Out, In Circulation</string>
    <string name="withAllTrackingAttributes">With all tracking attributes</string>
    <string name="allResourceTypes">All Resource Types</string>
    <string name="anyValue">Any Value</string>
    <string name="allCirculationTypes">All Ciruculation Types</string>
    <string name="noExclusions">No exclustions</string>
    <string name="newInventory">NEW INVENTORY</string>
    <string name="newInventoryName">New Inventory Name</string>
    <string name="limitedToLabel">Limited to: </string>
    <string name="resourceTypesLabel">Resource Types</string>
    <string name="purchasePriceLabel">Purchase Price</string>
    <string name="includeItemsLabel">Include Items</string>
    <string name="checkoutHandlingLabel">Checkout Handling</string>
    <string name="excludeItems">Account for Items Seen On or After</string>
    <string name="mismatchedItemLocationLabel">Mismatched Item Location</string>
    <string name="startInventory">Start Inventory</string>
    <string name="inventoryLocation">Inventory Location</string>
    <string name="circulationTypeLabel">Circulation Types</string>
    <string name="subLocationLabel">Sub Location</string>
    <string name="purchasePrice">Purchase Price</string>
    <string name="includeItemAttributes">Include Items with Attributes</string>
    <string name="checkoutHandling">Checkout Handling</string>
    <string name="callNumbersLabel">Call Numbers:</string>
</resources>