<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (c) 2018 Follett. All rights reserved.
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data class="AdvancedBinding">

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.follett.fsc.mobile.circdesk.viewmodel.AdvancedViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/library_EditText"
            style="@style/EditTextTheme"
            android:layout_marginTop="50dp"
            android:hint="@string/library_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <EditText
            android:id="@+id/port_EditText"
            style="@style/EditTextTheme"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/port_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/library_EditText"/>


        <EditText
            android:id="@+id/sslport_EditText"
            style="@style/EditTextTheme"
            android:layout_marginTop="32dp"
            android:hint="@string/ssl_port_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/port_EditText"/>

        <TextView
            android:id="@+id/connect_textview"
            style="@style/ActionButtonTheme"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/connect_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sslport_EditText"/>

    </android.support.constraint.ConstraintLayout>

</layout>
