<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (c) 2018 Follett. All rights reserved.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- this text/contents changes based on loading call numbers screen or Seen On or After screen -->

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:fontFamily="@font/opensans_regular"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="@color/blueLabel"
        android:layout_marginStart="@dimen/layout_size_16"
        android:layout_marginEnd="@dimen/layout_size_16"
        android:layout_marginTop="@dimen/layout_size_16"
        android:letterSpacing="0.1"
        android:text="@string/call_numbers_text"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/enterDate"
        style="@style/EditTextTheme"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:singleLine="true"
        android:clickable="true"
        android:focusable="false"
        android:editable="false"
        android:hint="@string/enter_date"
        android:letterSpacing="0.1"
        android:layout_below="@+id/description_text"/>

    <RelativeLayout
        android:id="@+id/call_numbers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_text"
        android:visibility="gone">
        <TextView
            android:id="@+id/call_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/layout_size_2"
            android:layout_marginTop="@dimen/layout_size_14"
            android:layout_marginStart="@dimen/layout_size_16"
            android:layout_marginEnd="@dimen/layout_size_16"
            android:fontFamily="@font/opensans_regular"
            android:textSize="@dimen/text_size_16sp"
            android:textColor="@color/blueLabel"
            android:letterSpacing="0.1"
            android:text="@string/call_from"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/callFromEdittext"
            style="@style/EditTextTheme"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:singleLine="true"
            android:hint="@string/call_num"
            android:letterSpacing="0.1"
            android:layout_below="@+id/call_from"/>

        <TextView
            android:id="@+id/call_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/layout_size_2"
            android:layout_marginTop="@dimen/layout_size_14"
            android:fontFamily="@font/opensans_regular"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginStart="@dimen/layout_size_16"
            android:layout_marginEnd="@dimen/layout_size_16"
            android:textColor="@color/blueLabel"
            android:layout_below="@+id/callFromEdittext"
            android:text="@string/call_to"
            android:letterSpacing="0.1"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/callToEdittext"
            style="@style/EditTextTheme"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:singleLine="true"
            android:hint="@string/call_num"
            android:letterSpacing="0.1"
            android:layout_below="@+id/call_to"/>

    </RelativeLayout>

</RelativeLayout>