<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (c) 2018 Follett. All rights reserved.
  ~  */
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginListener"
            type="com.follett.fsc.mobile.circdesk.app.CTAButtonListener" />

        <variable
            name="viewModel"
            type="com.follett.fsc.mobile.circdesk.feature.loginsetup.viewmodel.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userid_EditText"
            style="@style/EditTextTheme"
            android:layout_marginTop="50dp"
            android:hint="@string/user_id"
            android:imeOptions="actionNext"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_EditText"
            style="@style/EditTextTheme"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userid_EditText" />


        <Button
            android:id="@+id/login_textview"
            style="@style/ActionButtonTheme"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="@{(v) -> loginListener.ctaButtonOnClick(v)}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_EditText" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/bottom_bar"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/changeServerBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_size_36"
                android:layout_marginHorizontal="@dimen/layout_size_16"
                android:layout_marginVertical="@dimen/layout_size_18"
                android:background="@drawable/rounded_corners_button"
                android:gravity="center"
                android:onClick="@{(v) -> loginListener.ctaButtonOnClick(v)}"
                android:text="@string/log_in_to_a_different_server"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>
