<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (c) 2018 Follett. All rights reserved.
  ~  */
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="7dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/patronEntry"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensans_regular"
                    android:imeOptions="actionDone"
                    android:hint="@string/findPatron"
                    android:padding="10dp"
                    android:textSize="@dimen/text_size_16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <LinearLayout
                        android:id="@+id/checkoutPatronSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/rounded_solid_blue"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/patronGoBtn"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_regular"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/Go"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_16sp" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:layout_toLeftOf="@+id/checkoutPatronSubmit"
                        android:fontFamily="@font/opensans_regular"
                        android:padding="5dp"
                        android:text="@string/scan"
                        android:textColor="@color/blueLabel"
                        android:textSize="@dimen/text_size_16sp" />

                </RelativeLayout>


                <Switch
                    android:id="@+id/checkinLibRecordSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Record Library Use"
                    android:textColor="@color/blueLabel"
                    android:textSize="@dimen/text_size_16sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>